Bugs fix, alignment, new logic

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
 .main-container{
-    max-width: 1100px;
+    max-width: 100%;
     margin: 30px;
 }
