--- a/src/app/components/animal-attribute/animal-attribute.component.css
+++ b/src/app/components/animal-attribute/animal-attribute.component.css
@@ -10,7 +10,7 @@
     display: table-cell;
     background-color:white;
     padding: 8px;
-    transition-timing-function: ease-in;
+    transition: visibility 0s linear 0.33s, opacity 0.33s linear;
 }
 
 .two{
@@ -18,7 +18,7 @@
     display: table-cell;
     background-color:white;
     padding: 8px;
-    transition-timing-function: ease-in;
+    transition: visibility 0s linear 0.33s, opacity 0.33s linear;
 }
 
 
@@ -32,6 +32,24 @@
     border: 1px solid gray;
     border-radius: 4px;
 }
+
+.attribute-dropdown-input{
+    width: 100%;
+    height: 40px;
+    font-family: sans-serif;
+    color: black;
+    font-size: 18px;
+    padding: 10px;
+    border: 1px solid gray;
+    border-radius: 4px;
+    cursor: pointer;
+    text-shadow: 0 0 0 gray;
+
+}    :focus {
+    outline: none;
+}
+
+
 
 .animals-container-dropdown{
     padding: 5px;
@@ -88,4 +106,16 @@
     background-color: #e0e2e6;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.attributes-container-dropdown{
+    padding: 5px;
+    width: 100%;
+    background-color: white;
+    border: 0.5px solid #e0e2e6;
+    border-radius: 4px;
+    font-family: sans-serif;
+    font-size: 18px;
+    margin-top: 10px;
+    box-shadow: 5px 5px 15px #e0e2e6;
 }
